# mega-haskell

./: .gitignore  .travis.yml  Makefile  README.md  stack.yaml  test-site.cabal
haskell/src/: Alternative.hs  Applicative.hs  Arrow.hs  Bifunctor.hs  Cofree.hs  Combinators.hs  Comonad.hs  ContractTests.hs  Contravariant.hs  Deriving.hs  DoNotation.hs  Either.hs  Eq.hs  Foldable.hs  Form.hs  Free.hs  Functor.hs  Generics.hs  Lenses.hs  Maybe.hs  Monad.hs  Monoid.hs  Newtypes.hs  Nonempty.hs  Ord.hs  Parsing.hs  Path.hs  Profunctor.hs  Reader.hs  Redux.hs  Schema.hs  Screen.hs  Semigroup.hs  Semilattice.hs  Show.hs  State.hs  Static.hs  Stringtime.hs  Testing.hs  TotalEclipse.hs  (+6 more)
haskell/test/: AlternativeSpec.hs  ApplicativeSpec.hs  ArrowSpec.hs  BifunctorSpec.hs  CombinatorsSpec.hs  ComonadSpec.hs  ContravariantSpec.hs  DoSpec.hs  EitherSpec.hs  FoldableSpec.hs  FormSpec.hs  FreeSpec.hs  FunctorSpec.hs  LensesSpec.hs  MaybeSpec.hs  MonadSpec.hs  MonoidSpec.hs  NewtypesSpec.hs  NonemptySpec.hs  ProfunctorSpec.hs  ReaderSpec.hs  SchemaSpec.hs  SemigroupSpec.hs  SemilatticeSpec.hs  StateSpec.hs  TestingSpec.hs  TraversalSpec.hs  TypelevelSpec.hs  ValidationSpec.hs  WriteSpec.hs
purescript/: Variant.purs  package.json  packages.dhall  psc-package.json  spago.dhall
purescript/src/: CoordSemigroup.purs  EffectAndAff.purs  FoldEvents.purs  Form.purs  GenericJson.purs  LastEither.purs  Refined.purs  StyleLens.purs  Variant.purs
purescript/test/: EffectAndAff.purs  FoldEvents.purs  Main.purs  Refined.purs  Variant.purs
