name:               test-site
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.24

library
  other-modules:  Lenses
                  , Eq
                  , Ord
                  , Show
                  , Functor
                  , Bifunctor
                  , Profunctor
                  , Monoid
                  , Semigroup
                  , TotalEclipse
                  , Newtypes
                  , Applicative
                  , Alternative
                  , DoNotation
                  , Foldable
                  , Form
                  , Free
                  , Monad
                  , Reader
                  , Write
                  , State
                  , Nonempty
                  , Contravariant
                  , Arrow
                  , Stringtime
                  , Comonad
                  , Traversal
                  , Maybe
                  , Either
                  , Validation
  hs-source-dirs:   haskell/src
  build-depends:    base == 4.*
                  , lens
                  , curl
                  , free
                  , mtl
                  , ilist
                  , bifunctors
                  , profunctors
                  , comonad
                  , text
                  , validation
                  , containers
                  , hashable
                  , contravariant
                  , time
                  , transformers
  default-language: Haskell2010

test-suite unit-tests
  type:          exitcode-stdio-1.0
  main-is:       Spec.hs
  hs-source-dirs: haskell/test, haskell/src
  other-modules:  Lenses
                  , Eq
                  , Ord
                  , Show
                  , Functor
                  , Bifunctor
                  , Profunctor
                  , Monoid
                  , Semigroup
                  , TotalEclipse
                  , Newtypes
                  , Applicative
                  , Alternative
                  , Arrow
                  , DoNotation
                  , Foldable
                  , Form
                  , Free
                  , Monad
                  , Reader
                  , Write
                  , State
                  , Nonempty
                  , Contravariant
                  , Comonad
                  , Validation
                  , Testing
                  , Maybe
                  , MaybeSpec
                  , Either
                  , EitherSpec
                  , ApplicativeSpec
                  , AlternativeSpec
                  , ArrowSpec
                  , ComonadSpec
                  , ContravariantSpec
                  , DoSpec
                  , FoldableSpec
                  , FormSpec
                  , FreeSpec
                  , FunctorSpec
                  , BifunctorSpec
                  , ProfunctorSpec
                  , LensesSpec
                  , MonoidSpec
                  , NewtypesSpec
                  , SemigroupSpec
                  , MonadSpec
                  , StateSpec
                  , ReaderSpec
                  , ValidationSpec
                  , WriteSpec
                  , NonemptySpec
                  , Traversal
                  , TraversalSpec
                  , TestingSpec
  build-depends: base
                , mtl
                , ilist
                , lens
                , curl
                , free
                , bifunctors
                , profunctors
                , comonad
                , contravariant
                , validation
                , containers
                , time
                , transformers
                , hspec
                , QuickCheck
                , hspec-discover
