name:               test-site
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.24

library
  other-modules:  Lenses
                  , Eq
                  , Ord
                  , Show
                  , Deriving
                  , Functor
                  , Bifunctor
                  , Profunctor
                  , Monoid
                  , Semigroup
                  , TotalEclipse
                  , Newtypes
                  , Applicative
                  , Alternative
                  , DoNotation
                  , Foldable
                  , Form
                  , Free
                  , Monad
                  , Reader
                  , Write
                  , State
                  , Nonempty
                  , Contravariant
                  , Arrow
                  , Stringtime
                  , Comonad
                  , Traversal
                  , Maybe
                  , Either
                  , Validation
                  , Typelevel
                  , Static
                  , Redux
                  , Schema
                  , Viewfunctor
                  , Combinators
                  , Semilattice
                  , Cofree
                  , Websockets
                  , Parsing
                  , ContractTests
                  , Screen
  hs-source-dirs:   haskell/src
  build-depends:    base == 4.*
                  , lens
                  , bytestring
                  , aeson
                  , curl
                  , free
                  , mtl
                  , ilist
                  , bifunctors
                  , profunctors
                  , comonad
                  , text
                  , validation
                  , vector
                  , containers
                  , hashable
                  , contravariant
                  , time
                  , transformers
                  , QuickCheck
                  , generic-arbitrary
                  , ghc-prim
                  , functor-combinators
                  , semilattices
                  , generic-lens
                  , websockets
                  , string-conversions
                  , async-timer
                  , megaparsec
                  , warp
                  , wai
                  , wai-cors
                  , http-types
  default-language: Haskell2010

test-suite unit-tests
  type:          exitcode-stdio-1.0
  main-is:       Spec.hs
  hs-source-dirs: haskell/test, haskell/src
  other-modules:  Lenses
                  , Eq
                  , Ord
                  , Show
                  , Deriving
                  , Functor
                  , Bifunctor
                  , Profunctor
                  , Monoid
                  , Semigroup
                  , TotalEclipse
                  , Newtypes
                  , Applicative
                  , Alternative
                  , Arrow
                  , DoNotation
                  , Foldable
                  , Form
                  , Free
                  , Monad
                  , Reader
                  , Write
                  , State
                  , Nonempty
                  , Contravariant
                  , Combinators
                  , Comonad
                  , Redux
                  , Schema
                  , SchemaSpec
                  , Validation
                  , Testing
                  , Typelevel
                  , Cofree
                  , Maybe
                  , MaybeSpec
                  , Either
                  , EitherSpec
                  , ApplicativeSpec
                  , AlternativeSpec
                  , ArrowSpec
                  , ComonadSpec
                  , CombinatorsSpec
                  , ContravariantSpec
                  , DoSpec
                  , FoldableSpec
                  , FormSpec
                  , FreeSpec
                  , FunctorSpec
                  , BifunctorSpec
                  , ProfunctorSpec
                  , LensesSpec
                  , MonoidSpec
                  , NewtypesSpec
                  , Semilattice
                  , SemigroupSpec
                  , MonadSpec
                  , SemilatticeSpec
                  , StateSpec
                  , ReaderSpec
                  , ValidationSpec
                  , WriteSpec
                  , NonemptySpec
                  , Static
                  , Traversal
                  , TraversalSpec
                  , TestingSpec
                  , TypelevelSpec
                  , Viewfunctor
                  , ContractTests
  build-depends: base
                , mtl
                , aeson
                , bytestring
                , ilist
                , lens
                , curl
                , free
                , bifunctors
                , profunctors
                , comonad
                , contravariant
                , validation
                , containers
                , text
                , time
                , transformers
                , vector
                , hspec
                , QuickCheck
                , hspec-discover
                , ghc-prim
                , functor-combinators
                , semilattices
                , generic-lens
                , generic-arbitrary
